Fill in Privacy Policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,8 +3,88 @@
   <head>
     <meta charset="UTF-8">
     <title>Rivulus Studios Privacy Policy</title>
+
+    <style>
+body {
+    background-color: lightgray;
+}
+
+div {
+	width: 80%;
+	margin: 0 auto;
+	padding-bottom: 2cm;
+}
+
+h3 {
+    color: darkslategray;
+    margin-left: 0px;
+} 
+</style>
+
   </head>
   <body>
-  
+
+  <div >
+  <h2>Privacy Policy</h2>
+Rivulus Studios built the Lollipop Screen Recorder app as an ad-supported app. This SERVICE is provided by Rivulus Studios at no cost and is intended for use as is.
+
+This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
+
+If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
+
+<h3>Information Collection and Use</h3>
+
+For a better experience, while using our Service, information collected will be retained by us and used as described in this privacy policy.
+
+The app does use third party services that may collect information used to identify you.
+
+<h3>Log Data</h3>
+
+We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
+
+<h3>Service Providers</h3>
+
+We may employ third-party companies and individuals due to the following reasons:
+
+To facilitate our Service.
+To provide the Service on our behalf.
+To perform Service-related services.
+To assist us in analyzing how our Service is used.
+
+We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
+
+<h3>Location-Based Services</h3>
+
+We may collect, use, and share (with service providers) precise location data, including the real-time location of your mobile or fixed location device.
+
+<h3>Analytics Tools</h3>
+
+We use analytics tools and other third party technologies, to collect non-personal information in the form of various usage and user metrics when you use our Service. These tools and technologies collect and analyze certain types of information, including cookies, IP addresses, device and software identifiers, referring and exit URLs, in Service behavior and usage information, feature use metrics and statistics, usage history, MAC Address, mobile unique device ID, and other similar information.
+
+<h3>Advertising</h3>
+
+We use your information, including Personal Information, behavioral metrics, geo-location data, demographic data and marketing preferences to personalize and display advertisements and other content for you.
+
+<h3>Security</h3>
+
+We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
+
+<h3>Links to Other Sites</h3>
+
+This Service may contain links to other sites or services. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. we have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
+
+<h3>Children’s Privacy</h3>
+
+These Services do not address anyone under the age of 13. we do not knowingly collect personally identifiable information from children under 13.
+
+<h3>Changes to This Privacy Policy</h3>
+
+We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. we will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
+
+<h3>Contact Us</h3>
+
+If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:rivulusstudios@gmail.com">rivulusstudios@gmail.com</a>
+
+</div>
   </body>
 </html>
